[package]
name = "vulkan-tutorial-ash"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mackst/vulkan-tutorial-ash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.3", features = ["linked"] }
ash-window = "0.12.0"
raw-window-handle = "0.5.2"
winit = "0.28.6"


[[bin]]
name = "00_base_code"
path = "src/00_base_code.rs"

[[bin]]
name = "01_instance_creation"
path = "src/01_instance_creation.rs"

[[bin]]
name = "02_validation_layers"
path = "src/02_validation_layers.rs"

[[bin]]
name = "03_physical_device_selection"
path = "src/03_physical_device_selection.rs"
