[package]
name = "vulkan-tutorial-ash"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mackst/vulkan-tutorial-ash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.3", features = ["linked"] }
ash-window = "0.12.0"
raw-window-handle = "0.5.2"
winit = "0.28.6"


[[bin]]
name = "00_base_code"
path = "src/00_base_code.rs"

[[bin]]
name = "01_instance_creation"
path = "src/01_instance_creation.rs"

[[bin]]
name = "02_validation_layers"
path = "src/02_validation_layers.rs"

[[bin]]
name = "03_physical_device_selection"
path = "src/03_physical_device_selection.rs"

[[bin]]
name = "04_logical_device"
path = "src/04_logical_device.rs"

[[bin]]
name = "05_window_surface"
path = "src/05_window_surface.rs"

[[bin]]
name = "06_swap_chain_creation"
path = "src/06_swap_chain_creation.rs"

[[bin]]
name = "07_image_views"
path = "src/07_image_views.rs"

[[bin]]
name = "08_graphics_pipeline"
path = "src/08_graphics_pipeline.rs"

[[bin]]
name = "09_shader_modules"
path = "src/09_shader_modules.rs"

[[bin]]
name = "10_fixed_functions"
path = "src/10_fixed_functions.rs"

[[bin]]
name = "11_render_passes"
path = "src/11_render_passes.rs"

[[bin]]
name = "12_graphics_pipeline_complete"
path = "src/12_graphics_pipeline_complete.rs"

[[bin]]
name = "13_framebuffers"
path = "src/13_framebuffers.rs"

[[bin]]
name = "14_command_buffers"
path = "src/14_command_buffers.rs"

[[bin]]
name = "15_hello_triangle"
path = "src/15_hello_triangle.rs"

[[bin]]
name = "16_frames_in_flight"
path = "src/16_frames_in_flight.rs"

[[bin]]
name = "17_swap_chain_recreation"
path = "src/17_swap_chain_recreation.rs"

[[bin]]
name = "18_vertex_input"
path = "src/18_vertex_input.rs"
